# Ouendan

./: .gitignore  Cargo.toml  positive MAD-crew - Mynarco Addiction (Okoratu) [corner].osu  positive MAD-crew - Mynarco Addiction (Okoratu) [test].osu
atlas-packer/: .gitignore  Cargo.toml
atlas-packer/benches/: benchmarking.rs
atlas-packer/examples/: draw_output.rs
atlas-packer/src/: lib.rs
atlas-packer/tests/: testing.rs
ogfx/: Cargo.toml
ogfx/src/: context.rs  lib.rs  pipeline.rs  sprite.rs  spritebatch.rs  texture.rs  transform.rs  vertex.rs
src/: job.rs  main.rs  math.rs
src/game/: chart.rs  hitcircle_batch.rs  mod.rs  screen.rs  slider.rs
src/game/graphics/: atlas.rs  hitcircle_batch.rs  mod.rs  slider.rs
src/game/screen/: mod.rs  playing.rs
src/game/ui/: game_ui.rs
src/graphics/: buffer.rs  context.rs  mod.rs  pipeline.rs  shader.rs  sprite.rs  spritebatch.rs  texture.rs  transform.rs  vertex.rs
src/graphics/shaders/: shader.wgsl
