[package]
name = "ouendan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
wgpu = "0.12.0"
cgmath = "0.18.0"
pollster = "0.2.4"
winit = "0.26.0"
dotenv = "0.15.0"
crevice = { version = "0.8.0", features = ["cgmath"] }
bytemuck = "1.7.3"
image = "0.23.14"
kira = "0.5.3"
resources = "1.1.0"
slotmap = "1.0.6"
osu-parser = { path = "../osu-rs/osu-parser" }
trait_enum = "0.5.0"