[package]
name = "ouendan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
wgpu = "0.12.0"
cgmath = { version = "0.18.0", features = ["mint"] }
pollster = "0.2.4"
winit = "0.26.0"
dotenv = "0.15.0"
crevice = { version = "0.8.0", features = ["cgmath"] }
bytemuck = "1.7.3"
image = "0.23.14"
kira = "0.5.3"
resources = "1.1.0"
slotmap = "1.0.6"
osu-parser = { path = "../osu-rs/osu-parser" }
osu-types = { path = "../osu-rs/osu-types" }
osu-utils = { path = "../osu-rs/osu-utils" }
trait_enum = "0.5.0"
wgpu_glyph = "0.16.0"
futures = "0.3.19"
lyon = "0.17.10"
atlas-packer = { path = "atlas-packer" }
num-traits = "0.2.14"