[package]
name = "atlas-packer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mint = "0.5.8"

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3.5"
draw = "0.3.0"

[[bench]]
name = "benchmarking"
harness = false