[package]
name = "ogfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
cgmath = { version = "0.18.0", features = ["mint"] }
slotmap = "1.0.6"
crevice = { version = "0.8.0", features = ["cgmath"] }
pollster = "0.2.4"
bytemuck = "1.7.3"
image = "0.23.14"
winit = "0.26.0"
num-traits = "0.2.14"